@@ -43,7 +43,7 @@ prec_prec_f(x)
 
 static VALUE
 prec_induced_from(module, x)
-    
+    VALUE module, x;
 {
     rb_raise(rb_eTypeError, "undefined conversion from %s into %s",
             rb_class2name(CLASS_OF(x)), rb_class2name(module));
